# starstorm

./: .gitignore  CNAME  Cargo.toml  LICENSE.md  README.md  build.bat  build.rs  deploy.bat  make.bat  web-build.bat
.github/workflows/: rust_realease.yml  rust_release.yml  web_release.yml
docs/: Enemies.md
html/: index.html
src/: main.rs
src/components/: bug_enemie.rs  bug_enemy.rs  bullet.rs  bullet_collider.rs  camera_shake.rs  collision.rs  damage_shake.rs  death_scene_system.rs  enemie.rs  enemy.rs  enemy_collider.rs  enemy_plugin.rs  entity_rotation.rs  friction.rs  game_scene_system.rs  health.rs  main_menu_system.rs  menu_scene_system.rs  mod.rs  mortar_bluster.rs  mouse_position.rs  onyx_bluster.rs  player.rs  player_bluster.rs  player_collider.rs  player_controller.rs  player_death_system.rs  player_health_text.rs  player_shoot.rs  simple_bluster.rs  simple_enemie.rs  simple_enemy.rs  speed.rs  spike_enemie.rs  spike_enemy.rs  velocity.rs  wave_count_text.rs  wave_system.rs  weapon.rs  weapon_charget_bar.rs  (+1 more)
src/controllers/: player.rs
src/enemy/: andromeda_ascendant_enemy.rs  astral_eclipse_enemy.rs  bug_enemy.rs  celestial_voyager_enemy.rs  enemy.rs  enemy_collider.rs  enemy_groups.rs  enemy_plugin.rs  galactic_horizon_enemy.rs  hyperion_vanguard_enemy.rs  interstellar_falcon_enemy.rs  mod.rs  nebula_serpent_enemy.rs  nebula_wanderer_enemy.rs  nova_starstrider_enemy.rs  orions_fury_enemy.rs  phoenix_nebulon_enemy.rs  seraphic_skyrider_enemy.rs  simple_enemy.rs  spike_enemy.rs  (+2 more)
web/: index.html  starstorm.d.ts  starstorm.js  starstorm_bg.wasm.d.ts
(+42 files in other folders)
