[package]
name = "starstorm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.0"
bevy-trait-query = "0.2.1"
bevy_kira_audio = { version = "0.15.0", features = [
    "wav",
    "mp3"
]}
rand = "0.8.5"
