[package]
name = "starstorm"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [target.wasm32-unknown-unknown.build-dependencies]
# winres = "0.1"

[build-dependencies]
winres = "0.1"

[dependencies]
bevy = "0.10.0"
bevy-trait-query = "0.2.1"
bevy_kira_audio = { version = "0.15.0", features = [
    "wav",
    "mp3"
]}
image = "0.24.6"
rand = "0.8.5"
wasm-bindgen = "0.2.86"
winit = "0.28.6"
